[gd_scene load_steps=2 format=3 uid="uid://c5roconmp6v0b"]

[ext_resource type="Script" uid="uid://d0af3jytq0aok" path="res://game/managers/enemies/spawning/enemy_spawner.gd" id="1_xg85e"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_xg85e")

[node name="TimeBetweenEnemies" type="Timer" parent="."]

[node name="SpawnPoint" type="Marker2D" parent="."]

[node name="ExitPoint" type="Marker2D" parent="."]
